--- a/first.html
+++ b/first.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>сосав?</title>
+    <title>FFFFFFFFFF</title>
     <link rel="stylesheet" href="first.css">
 </head>
 <body>
@@ -30,7 +30,7 @@
         <a href="prekt.html" class="btn blue">Практичні</a>
         <a href="pronas.html" class="btn blue">Про нас</a>
         <a href="login.html" class="btn">Увійти</a>
-        <a href="rest.html" class="btn bright">Реєстрація</a>
+        <a href="Registration.html" class="btn bright">Реєстрація</a>
       </nav>
     </header>
     
