--- a/prem.html
+++ b/prem.html
@@ -19,7 +19,7 @@
       <button><a href="prekt.html">Практичні</a></button>
       <button><a href="pronas.html">Про нас</a></button>
       <button><a href="login.html"><class="right">Увійти</a></button>
-      <button><a href="rest.html"><class="right">Реєстрація</a></button>
+      <button><a href="Registration.html"><class="right">Реєстрація</a></button>
     </nav>
   </header>
 
