--- a/vstup.html
+++ b/vstup.html
@@ -17,7 +17,7 @@
     <a href="prekt.html">Практичні</a>
     <a href="pronas.html">Про нас</a>
     <a href="login.html" class="btn">Увійти</a>
-    <a href="rest.html" class="btn bright">Реєстрація</a>
+    <a href="Registration.html" class="btn bright">Реєстрація</a>
   </div>
 
   <div class="content">
@@ -30,7 +30,7 @@
     </p>
 
     <div class="photo">
-      <img src="cmal.jpg" alt="Вступ фото">
+      <img src="ChatGPT Image 10 мая 2025 г., 22_21_12.png" alt="Вступ фото">
     </div>
   </div>
 </body>
