--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Вхід</title>
-    <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -19,14 +19,27 @@
    
     </header>
     <section class="hero">
-       <div class="button"><a href="#" class="a0">Головна</a></div>
-       <div class="button1"><a href="#" class="a1">Вступ</a></div>
-       <div class="button2"><a href="#" class="a2">Преміум</a></div>
-       <div class="button3"><a href="#" class="a3">Лекції</a></div>
-       <div class="button4"><a href="#" class="a4">Практичні</a></div>
-       <div class="button5"><a href="Pro.html" class="a5">Про нас</a></div>
-       <div class="button6"><a href="Index.html" class="a6">Увійти</a></div>
-       <div class="button7"><a href="Registration.html" class="a7">Реєстрація</a></div>
+       <div class="button1">
+            <a href="#" class="a1">Вступ</a>
+       </div>
+       <div class="button2">
+        <a href="#" class="a2">Преміум</a>
+       </div>
+       <div class="button3">
+        <a href="#" class="a3">Лекції</a>
+       </div>
+       <div class="button4">
+        <a href="#" class="a4">Практичні</a>
+       </div>
+       <div class="button5">
+        <a href="#" class="a5">Про нас</a>
+       </div>
+       <div class="button6">
+        <a href="#" class="a6">Увійти</a>
+       </div>
+       <div class="button7">
+        <a href="#" class="a7">Реєстрація</a>
+       </div>
     </section>
     <section class="main">
         <h1 align="center" class="mainVhid">Увійти</h1>
